--- a/src/About.css
+++ b/src/About.css
@@ -1,6 +1,7 @@
 .row {
   display: flex;
   justify-content: space-evenly;
+  text-align: center;
 }
 
 .feature-title {
@@ -31,17 +32,16 @@
   width: 60px;
 }
 
-/* @media screen and (max-width: 768px) {
-  .content,
+@media screen and (max-width: 768px) {
+  .row {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .content {
+    margin: 0 3rem 2rem 3rem;
+  }
   .feature-title {
-    width: 0;
-    height: 0;
+    margin: 1.5rem 3rem 0 3rem;
   }
 }
-@media screen and (min-width: 768px) {
-  .content,
-  .feature-title {
-    width: 0;
-    height: 0;
-  }
-} */
