--- a/src/About.css
+++ b/src/About.css
@@ -14,22 +14,12 @@
 
 .content {
   margin: 0 3rem 3rem 7rem;
+  text-align: center;
   background-color: #9900ee;
   background-image: linear-gradient(315deg, #0cb2f3 0%, #d775e0 74%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 600;
-}
-
-.icon {
-  padding: 1rem;
-  margin: 3rem 5rem 0 5rem;
-  background-color: #9900ee;
-  background-image: linear-gradient(315deg, #0cb2f3 0%, #d775e0 74%);
-  -webkit-background-clip: image;
-  -webkit-image-fill-color: transparent;
-  height: 60px;
-  width: 60px;
 }
 
 @media screen and (max-width: 768px) {
@@ -38,10 +28,10 @@
     flex-direction: column;
     text-align: center;
   }
-  .content {
-    margin: 0 3rem 2rem 3rem;
-  }
   .feature-title {
     margin: 1.5rem 3rem 0 3rem;
+  }
+  .content {
+    margin: 0 3rem 2rem 3rem;
   }
 }
