--- a/src/Upload.css
+++ b/src/Upload.css
@@ -55,6 +55,10 @@ img {
     width: 17rem;
     height: 20rem;
   }
+  .choose {
+    width: 12rem;
+    padding: 2.5rem;
+  }
 }
 @media screen and (min-width: 768px) {
   .box-preview,
