Added Final Frontend Files

--- a/src/Upload.css
+++ b/src/Upload.css
@@ -26,6 +26,16 @@ img {
   width: 600px;
   height: 300px;
 }
+.finalCanvas {
+  position: absolute;
+  margin: 10rem auto 3rem auto;
+  text-align: center;
+  left: 0;
+  right: 0;
+  z-index: 8;
+  width: 600px;
+  height: 300px;
+}
 
 .btn-fnc {
   color: white !important;
@@ -55,6 +65,11 @@ img {
     width: 17rem;
     height: 20rem;
   }
+  .finalCanvas {
+    margin-top: 20rem;
+    width: 17rem;
+    height: 20rem;
+  }
   .choose {
     width: 12rem;
     padding: 2.5rem;
@@ -62,7 +77,8 @@ img {
 }
 @media screen and (min-width: 768px) {
   .box-preview,
-  img {
+  img,
+  .finalCanvas {
     width: 37.5rem;
     height: 18.75rem;
   }
