--- a/src/About.css
+++ b/src/About.css
@@ -5,21 +5,26 @@
 }
 
 .feature-title {
-  margin: 3rem 3rem 0.5rem 7rem;
-  background-color: #9900ee;
+  margin: 2rem auto auto auto;
+  /* background-color: #9900ee;
   background-image: linear-gradient(315deg, #0cb2f3 0%, #d775e0 74%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent; */
+  color: white;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .content {
-  margin: 0 3rem 3rem 7rem;
+  margin: 0.5rem auto auto auto;
   text-align: center;
-  background-color: #9900ee;
+  /* background-color: #9900ee;
   background-image: linear-gradient(315deg, #0cb2f3 0%, #d775e0 74%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent; */
   font-weight: 600;
+  color: white;
+  font-family: "Ubuntu", sans-serif;
+  width: 20rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -29,9 +34,9 @@
     text-align: center;
   }
   .feature-title {
-    margin: 1.5rem 3rem 0 3rem;
+    margin: 1.5rem auto 0 auto;
   }
   .content {
-    margin: 0 3rem 2rem 3rem;
+    margin: 0.5rem auto 2rem auto;
   }
 }
