--- a/src/About.css
+++ b/src/About.css
@@ -6,25 +6,26 @@
 
 .feature-title {
   margin: 2rem auto auto auto;
+  color: white;
+  font-family: "Ubuntu", sans-serif;
   /* background-color: #9900ee;
   background-image: linear-gradient(315deg, #0cb2f3 0%, #d775e0 74%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; */
-  color: white;
-  font-family: "Ubuntu", sans-serif;
 }
 
 .content {
   margin: 0.5rem auto auto auto;
+  padding-bottom: 5rem;
   text-align: center;
-  /* background-color: #9900ee;
-  background-image: linear-gradient(315deg, #0cb2f3 0%, #d775e0 74%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
   font-weight: 600;
   color: white;
   font-family: "Ubuntu", sans-serif;
   width: 20rem;
+  /* background-color: #9900ee;
+  background-image: linear-gradient(315deg, #0cb2f3 0%, #d775e0 74%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
 }
 
 @media screen and (max-width: 768px) {
@@ -37,7 +38,6 @@
     margin: 1.5rem auto 0 auto;
   }
   .content {
-    margin: 0.5rem auto 2rem auto;
+    margin: 0.5rem auto 0 auto;
   }
 }
-
