--- a/src/Upload.css
+++ b/src/Upload.css
@@ -3,13 +3,12 @@
   padding: 2rem;
   text-align: center;
   width: 50rem;
-  /* background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(2px);
-  -webkit-backdrop-filter: blur(2px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18); */
 }
+
+.button-hidden {
+  visibility: hidden;
+}
+
 .uploading {
   padding-bottom: 2rem;
 }
@@ -20,10 +19,9 @@
   height: 300px;
   object-fit: contain;
   background-color: #fff;
-  /* border-color: #000;
-  border-style: inset; */
   border-radius: 5px;
 }
+
 .choose {
   /* background-color: #9900ee;
   background-image: linear-gradient(315deg, #0cb2f3 10%, #d775e0 74%);
@@ -34,10 +32,13 @@
   padding-bottom: 30px;
   font-family: "Roboto", sans-serif;
 }
+
 img {
   width: 600px;
   height: 300px;
+  border-radius: 5px;
 }
+
 .finalCanvas {
   position: absolute;
   margin: 10rem auto 3rem auto;
@@ -47,6 +48,7 @@ img {
   z-index: 8;
   width: 600px;
   height: 300px;
+  padding: 3rem 0;
 }
 
 .btn-fnc {
@@ -65,7 +67,7 @@ img {
   background-color: white;
   color: black;
   box-shadow: inset 0 0 7px #fff, inset -6px 0 7px #fff, inset 6px 0 7px #fff,
-    0 0 18px #fff, 6px 0 7px #fff, -6px 0 7px #fff;
+    0 0 7px #fff, 6px 0 7px #fff, -6px 0 7px #fff;
 }
 
 .uploadTxt {
@@ -75,12 +77,6 @@ img {
 
 @media screen and (max-width: 765px) {
   .upload-component {
-    /* background: rgba(255, 255, 255, 0.1);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(2px);
-    -webkit-backdrop-filter: blur(2px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18); */
     width: auto;
     margin: 0 0.5rem;
   }
@@ -93,7 +89,7 @@ img {
     height: 20rem;
   }
   .finalCanvas {
-    margin-top: 20rem;
+    margin-top: 35rem;
     width: 17rem;
     height: 20rem;
   }
