--- a/src/Upload.css
+++ b/src/Upload.css
@@ -13,6 +13,15 @@
   padding-bottom: 2rem;
 }
 
+.uploading-final {
+  padding-bottom: 2rem;
+  position: absolute;
+  margin-top: 35rem;
+  left: 0;
+  right: 0;
+  z-index: 8;
+}
+
 .box-preview {
   margin: auto;
   width: 600px;
@@ -23,10 +32,6 @@
 }
 
 .choose {
-  /* background-color: #9900ee;
-  background-image: linear-gradient(315deg, #0cb2f3 10%, #d775e0 74%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
   color: black;
   padding-top: 1rem;
   padding-bottom: 30px;
