--- a/src/Upload.css
+++ b/src/Upload.css
@@ -85,6 +85,11 @@ img {
     width: auto;
     margin: 0 0.5rem;
   }
+
+  .uploading-final {
+    margin-top: 40rem;
+  }
+
   .box-preview {
     width: 17rem;
     height: 20rem;
@@ -94,7 +99,7 @@ img {
     height: 20rem;
   }
   .finalCanvas {
-    margin-top: 35rem;
+    margin-top: 40rem;
     width: 17rem;
     height: 20rem;
   }
